# Santola-Quiz

./: dados.json  pyproject.toml
src/: app.py  dados.json  inicial.py  main.py  quiz.py
src/assets/: dados.json
